# sdl_2d_engine

./: .gitmodules  CMakeLists.txt  README.md
include/: rigidbody2d.h  string.h  vector2d.h
include/2DEngine/: game.h  hashmap.h  string.h
src/: game.c  hashmap.c  main.c  rigidbody2d.c  string.c  vector2d.c
